@@ -200,7 +200,7 @@ public:
 		OUTPUT_BY_MATERIAL_ID,
 		OUTPUT_IRRADIANCE,
 		OUTPUT_OBJECT_ID,
-		OUTPUT_OBJECT_ID_MASK ,
+		OUTPUT_OBJECT_ID_MASK,
 		OUTPUT_BY_OBJECT_ID,
 		OUTPUT_SAMPLECOUNT,
 		OUTPUT_CONVERGENCE,
